first changes ig

--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-hello
+<h1 class="fullname">Augmented Perspective</h1>
+<ul>
+  <li><a class="active" href="#aboutme">About me</a></li>
+  <li><a href="my_projects.html">My Projects</a></li>
+  <li><a href="my_life.html">My Life</a></li>
+  <li><a href="contact.html">Contact</a></li>
+</ul>
 <footer>
+  <p>
+    <ul>
+        <li><a href="https://www.instagram.com/ivan_rugby/" target="_blank"><img src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-instagram-new-circle-512.png" alt="Instagram" width="40" height="40" href = "https://www.instagram.com/ivan_rugby/"></li></a>
+        <li><a href="https://twitter.com/kuzminivan51" target="_blank"><img src="https://image.flaticon.com/icons/png/512/722/722466.png" alt="Twitter" width="40" height="40" ></li></a>
+        <li><a href="https://www.facebook.com/ivan.kuzmin.961" target="_blank"><img src="https://cdn3.iconfinder.com/data/icons/facebook-ui-flat/48/Facebook_UI-03-512.png" alt="Facebook" width="40" height="40" ></li></a>
+        <li><a href="mailto: kuzminivan51@gmail.com" target="_blank"><img src="https://png.pngtree.com/svg/20150526/fdde323a9d.png" alt="Email" width="40" height="40" ></li></a>
+    </ul>
+  </p>
 </footer>
 </body>
 </html>
