--- a/contact.html
+++ b/contact.html
@@ -2,16 +2,20 @@
 <html>
 <head>
   <title>Contact</title>
+  <link rel="icon" type="image/png" href="img/contact.png" />
   <link rel="stylesheet" href="styles.css">
 </head>
 <body style="background-color : grey">
     <ul style="background-color : grey">
-        <li style = "float : left"><a href="https://www.instagram.com/ivan_rugby/" target="_blank"><img src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-instagram-new-circle-512.png" alt="Instagram" width="200" height="200" href = "https://www.instagram.com/ivan_rugby/"></li></a>
-        <li style = "float : left"><a href="https://twitter.com/kuzminivan51" target="_blank"><img src="https://image.flaticon.com/icons/png/512/722/722466.png" alt="Twitter" width="200" height="200" ></li></a>
-        <li style = "float : left"><a href="https://www.facebook.com/ivan.kuzmin.961" target="_blank"><img src="https://cdn3.iconfinder.com/data/icons/facebook-ui-flat/48/Facebook_UI-03-512.png" alt="Facebook" width="200" height="200" ></li></a>
-        <li style = "float : left"><a href="mailto: kuzminivan51@gmail.com" target="_blank"><img src="https://png.pngtree.com/svg/20150526/fdde323a9d.png" alt="Email" width="200" height="200" ></li></a>
+        <li style = "float : left"><a href="https://www.instagram.com/ivan_rugby/" target="_blank"><img src="img/instagram.png" alt="Instagram" width="200" height="200" href = "https://www.instagram.com/ivan_rugby/"></li></a>
+        <li style = "float : left"><a href="https://twitter.com/kuzminivan51" target="_blank"><img src="img/twitter.png" alt="Twitter" width="200" height="200" ></li></a>
+        <li style = "float : left"><a href="https://www.facebook.com/ivan.kuzmin.961" target="_blank"><img src="img/facebook.png" alt="Facebook" width="200" height="200" ></li></a>
+        <li style = "float : left"><a href="mailto: kuzminivan51@gmail.com" target="_blank"><img src="img/email.png" alt="Email" width="200" height="200" ></li></a>
+        <br>
     </ul>
   </p>
-</footer>
 </body>
+<div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"
+title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
+title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 </html>
