--- a/index.html
+++ b/index.html
@@ -2,27 +2,53 @@
 <html>
 <head>
   <title>Augmented Perspective</title>
+  <link rel="icon" type="image/png" href="https://png.pngtree.com/element_our/sm/20180626/sm_5b321ca7a1ca4.png" />
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <script src="javascript.js"></script>
 </head>
 <body>
-<h1>Augmented Perspective</h1>
-<ul>
-  <li><a class="active" href="#aboutus">About Us</a></li>
+<h1 class="augmentedPerspective">Augmented Perspective</h1>
+
+<ul class="navbar">
+  <li><a class="active" href="index.html">About Us</a></li>
   <li><a href="ourprojects.html">Our Project</a></li>
   <li><a href="ourteam.html">Our Team</a></li>
   <li><a href="contact.html">Contact Us</a></li>
 </ul>
-<a href="https://anchor.fm/ivan-kuzmin" target="_blank"> <img src="https://s3-us-west-2.amazonaws.com/anchor-generated-image-bank/production/podcast_uploaded_nologo/1996526/1996526-1562179536800-31d63d10212f7.jpg" class="podcast_image"></a>
+
+<p>This page is about us</p>
+
 <footer>
-  <p>
-    <ul>
-        <li><a href="https://www.instagram.com/ivan_rugby/" target="_blank"><img src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-instagram-new-circle-512.png" alt="Instagram" width="40" height="40" href = "https://www.instagram.com/ivan_rugby/"></li></a>
-        <li><a href="https://twitter.com/kuzminivan51" target="_blank"><img src="https://image.flaticon.com/icons/png/512/722/722466.png" alt="Twitter" width="40" height="40" ></li></a>
-        <li><a href="https://www.facebook.com/ivan.kuzmin.961" target="_blank"><img src="https://cdn3.iconfinder.com/data/icons/facebook-ui-flat/48/Facebook_UI-03-512.png" alt="Facebook" width="40" height="40" ></li></a>
-        <li><a href="mailto: kuzminivan51@gmail.com" target="_blank"><img src="https://png.pngtree.com/svg/20150526/fdde323a9d.png" alt="Email" width="40" height="40" ></li></a>
-    </ul>
-  </p>
+
+    <div class="share-buttons-container">
+    <div class="share-list">
+        <!-- FACEBOOK -->
+        <a class="fb-h" target="_blank">
+          <img src="https://img.icons8.com/material-rounded/96/000000/facebook-f.png">
+        </a>
+
+        <!-- TWITTER -->
+        <a class="tw-h"  target="_blank">
+          <img src="https://img.icons8.com/material-rounded/96/000000/twitter-squared.png">
+        </a>
+
+        <!-- INSTAGRAM -->
+        <a class="ig-h" target="_blank">
+          <img src="https://img.icons8.com/ios-glyphs/90/000000/instagram.png">
+        </a>
+
+        <!-- EMAIL -->
+        <a class="em-h" target="_blank">
+          <img src="https://img.icons8.com/ios-glyphs/90/000000/email.png">
+        </a>
+      </div>
+    </div>
+
+    <div style="text-align:center; padding:10%">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"                 
+    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
+    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 </footer>
 </body>
 </html>
