--- a/contact.html
+++ b/contact.html
@@ -4,18 +4,26 @@
   <title>Contact</title>
   <link rel="icon" type="image/png" href="img/contact.png" />
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="img/group.png" />
+  <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  <script src="javascript.js"></script>
 </head>
 <body style="background-color : grey">
-    <ul style="background-color : grey">
-        <li style = "float : left"><a href="https://www.instagram.com/ivan_rugby/" target="_blank"><img src="img/instagram.png" alt="Instagram" width="200" height="200" href = "https://www.instagram.com/ivan_rugby/"></li></a>
-        <li style = "float : left"><a href="https://twitter.com/kuzminivan51" target="_blank"><img src="img/twitter.png" alt="Twitter" width="200" height="200" ></li></a>
-        <li style = "float : left"><a href="https://www.facebook.com/ivan.kuzmin.961" target="_blank"><img src="img/facebook.png" alt="Facebook" width="200" height="200" ></li></a>
-        <li style = "float : left"><a href="mailto: kuzminivan51@gmail.com" target="_blank"><img src="img/email.png" alt="Email" width="200" height="200" ></li></a>
+        <div class="socialMedia">
+
+          <div class="socials instagram" style="float:left"><a href="#" target="_blank"><img src="img/instagram.png" alt="Instagram" width="200" height="200"></div></a>
+          <div class="socials twitter" style="float:left"><a href="#" target="_blank"><img src="img/twitter.png" alt="Twitter" width="200" height="200" ></div></a>
+          <div class="socials facebook" style="float:left"><a href="#" target="_blank"><img src="img/facebook.png" alt="Facebook" width="200" height="200" ></div></a>
+          <div class="socials email" style="float:left"><a href="#" target="_blank"><img src="img/email.png" alt="Email" width="200" height="200" ></div></a>
+
+        </div>
         <br>
-    </ul>
-  </p>
 </body>
-<div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"
+<footer>
+<div style="text-align:center; padding-top:10%">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"
 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+</footer>
 </html>
