--- a/index.html
+++ b/index.html
@@ -18,8 +18,15 @@
   <li><a href="contact.html">Contact Us</a></li>
 </ul>
 
-<p>This page is about us</p>
-
+<p>This page is about us</p><br>
+<p>You can find the link to our podcast by clicking on the image below</p>
+  <a href="https://anchor.fm/ivan-kuzmin" target="_blank">
+    <img src="img/podcast.png" alt="Link to the podcast">
+  </a>
+<p>It is also available on Spotify</p>
+<a href="spotify:show:4CJploGVGTwqdGxJf3b7F2" target="_blank">
+  <img src="img/spotify.png" alt="Link to the podcast">
+</a>
 <footer>
 
     <div class="share-buttons-container">
@@ -46,7 +53,7 @@
       </div>
     </div>
 
-    <div style="text-align:center; padding:10%">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"                 
+    <div style="text-align:center; padding-top:10%">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"
     title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
     title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 </footer>
