--- a/ourprojects.html
+++ b/ourprojects.html
@@ -47,7 +47,7 @@
       </div>
     </div>
 
-    <div style="text-align:center; padding:10%">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
+    <div style="text-align:center; padding-top:10%">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
       title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 
 </footer>
