--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,15 @@
   <link rel="stylesheet" href="styles.css">
   <script src="javascript.js"></script>
 </head>
-<body style="background-color : grey">
+<body>
+  <h1 class="augmentedPerspective">Augmented Perspective</h1>
+
+  <ul class="navbar">
+    <li><a class="active" href="index.html">About Us</a></li>
+    <li><a href="ourprojects.html">Our Project</a></li>
+    <li><a href="ourteam.html">Our Team</a></li>
+    <li><a href="contact.html">Contact Us</a></li>
+  </ul>
         <div class="socialMedia">
 
           <div class="socials instagram" style="float:left"><a href="#" target="_blank"><img src="img/instagram.png" alt="Instagram" width="200" height="200"></div></a>
