--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="javascript.js"></script>
 </head>
 <body>
-<h1 class="augmentedPerspective">Augmented Perspective</h1>
+<h1 class="augmentedPerspective">Augmented Perspectives</h1>
 
 <ul class="navbar">
   <li><a class="active" href="index.html">About Us</a></li>
