--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="javascript.js"></script>
 </head>
 <body>
-<h1 class="augmentedPerspective">Augmented Perspectives</h1>
+<h1 class="augmentedPerspective">Augmented Perspective</h1>
 
 <ul class="navbar">
   <li><a class="active" href="index.html">About Us</a></li>
@@ -17,7 +17,6 @@
   <li><a href="ourteam.html">Our Team</a></li>
   <li><a href="contact.html">Contact Us</a></li>
 </ul>
-
 <p>This page is about us</p><br>
 <p>You can find the link to our podcast by clicking on the image below</p>
   <a href="https://anchor.fm/ivan-kuzmin" target="_blank">
