--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <li><a href="ourteam.html">Our Team</a></li>
   <li><a href="contact.html">Contact Us</a></li>
 </ul>
+<br>
+<img src="img/ap.png" alt="Augmented Perspective">
 <p>This page is about us</p><br>
 <p>You can find the link to our podcast by clicking on the image below</p>
   <a href="https://anchor.fm/ivan-kuzmin" target="_blank">
