--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="javascript.js"></script>
 </head>
 <body>
+  <img class="not_a_logo" src="img/ap.png" alt="Augmented Perspective">
 <h1 class="augmentedPerspective">Augmented Perspective</h1>
 
 <ul class="navbar">
@@ -17,9 +18,8 @@
   <li><a href="ourteam.html">Our Team</a></li>
   <li><a href="contact.html">Contact Us</a></li>
 </ul>
-<br>
-<img src="img/ap.png" alt="Augmented Perspective">
-<p>This page is about us</p><br>
+<br><br>
+<h1 style="text-align:center;">This page is about us</h1><br>
 <p>You can find the link to our podcast by clicking on the image below</p>
   <a href="https://anchor.fm/ivan-kuzmin" target="_blank">
     <img src="img/podcast.png" alt="Link to the podcast">
