--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <title>Augmented Perspective</title>
-  <link rel="icon" type="image/png" href="https://png.pngtree.com/element_our/sm/20180626/sm_5b321ca7a1ca4.png" />
+  <link rel="icon" type="image/png" href="ap.png" />
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <script src="javascript.js"></script>
 </head>
 <body>
-  <img class="not_a_logo" src="img/ap.png" alt="Augmented Perspective">
+  <img class="not_a_logo" src="img/ap.png" alt="Augmented Perspective"width="200" height="200">
 <h1 class="augmentedPerspective">Augmented Perspective</h1>
 
 <ul class="navbar">
@@ -30,29 +30,19 @@
 </a>
 <footer>
 
-    <div class="share-buttons-container">
-    <div class="share-list">
-        <!-- FACEBOOK -->
-        <a class="fb-h" target="_blank">
-          <img src="https://img.icons8.com/material-rounded/96/000000/facebook-f.png">
-        </a>
+<div id="menu-outer">
+  <div class="table">
+    <ul id="horizontal-list" class="sharing">
 
-        <!-- TWITTER -->
-        <a class="tw-h"  target="_blank">
-          <img src="https://img.icons8.com/material-rounded/96/000000/twitter-squared.png">
-        </a>
+      <li><a href="#" target="_blank"><img style="align-self: auto; max-width:100%;"src="img/instagram.png" alt="Instagram" width="50" height="50"></li></a>
+      <li><a href="#" target="_blank"><img style="align-self: auto;max-width:100%;"src="img/twitter.png" alt="Twitter" width="50" height="50" ></li></a>
+      <li><a href="#" target="_blank"><img style="align-self: auto;max-width:100%;"src="img/facebook.png" alt="Facebook" width="50" height="50" ></li></a>
+      <li><a href="#" target="_blank"><img style="align-self: auto;max-width:100%;"src="img/email.png" alt="Email" width="50" height="50" ></li></a>
 
-        <!-- INSTAGRAM -->
-        <a class="ig-h" target="_blank">
-          <img src="https://img.icons8.com/ios-glyphs/90/000000/instagram.png">
-        </a>
+    </ul>
 
-        <!-- EMAIL -->
-        <a class="em-h" target="_blank">
-          <img src="https://img.icons8.com/ios-glyphs/90/000000/email.png">
-        </a>
-      </div>
-    </div>
+  </div>
+</div>
 
     <div style="text-align:center; padding-top:10%">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"
     title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
