spotify icon added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Augmented Perspective</title>
-  <link rel="icon" type="image/png" href="ap.png" />
+  <link rel="icon" type="image/png" href="img/spotify.png" />
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
