--- a/contact.html
+++ b/contact.html
@@ -19,14 +19,22 @@
     <li><a href="ourteam.html">Our Team</a></li>
     <li><a href="contact.html">Contact Us</a></li>
   </ul>
-        <div class="socialMedia">
 
-          <div class="socials instagram" style="float:left"><a href="#" target="_blank"><img src="img/instagram.png" alt="Instagram" width="200" height="200"></div></a>
-          <div class="socials twitter" style="float:left"><a href="#" target="_blank"><img src="img/twitter.png" alt="Twitter" width="200" height="200" ></div></a>
-          <div class="socials facebook" style="float:left"><a href="#" target="_blank"><img src="img/facebook.png" alt="Facebook" width="200" height="200" ></div></a>
-          <div class="socials email" style="float:left"><a href="#" target="_blank"><img src="img/email.png" alt="Email" width="200" height="200" ></div></a>
+  <div >
+    <div class="table">
+      <ul id="horizontal-list" class="sharing">
 
-        </div>
+        <li><a href="#" target="_blank"><img style="align-self: auto; max-width:100%;"src="img/instagram.png" alt="Instagram" width="200" height="200"></li></a>
+        <li><a href="#" target="_blank"><img style="align-self: auto; max-width:100%;"src="img/twitter.png" alt="Twitter" width="200" height="200" ></li></a>
+        <li><a href="#" target="_blank"><img style="align-self: auto; max-width:100%;"src="img/facebook.png" alt="Facebook" width="200" height="200" ></li></a>
+        <li><a href="#" target="_blank"><img style="align-self: auto; max-width:100%;"src="img/email.png" alt="Email" width="200" height="200" ></li></a>
+
+      </ul>
+
+    </div>
+  </div>
+    <h1 style="text-align:center; font-size:32px;">You can contact us by clicking on any of the links above.</h1>
+
         <br>
 </body>
 <footer>
