--- a/ourprojects.html
+++ b/ourprojects.html
@@ -23,29 +23,19 @@
 
 <footer>
 
-    <div class="share-buttons-container">
-    <div class="share-list">
-        <!-- FACEBOOK -->
-        <a class="fb-h" target="_blank">
-          <img src="https://img.icons8.com/material-rounded/96/000000/facebook-f.png">
-        </a>
+  <div id="menu-outer">
+    <div class="table">
+      <ul id="horizontal-list" class="sharing">
 
-        <!-- TWITTER -->
-        <a class="tw-h"  target="_blank">
-          <img src="https://img.icons8.com/material-rounded/96/000000/twitter-squared.png">
-        </a>
+        <li><a href="#" target="_blank"><img style="align-self: auto; max-width:100%;"src="img/instagram.png" alt="Instagram" width="50" height="50"></li></a>
+        <li><a href="#" target="_blank"><img style="align-self: auto;max-width:100%;"src="img/twitter.png" alt="Twitter" width="50" height="50" ></li></a>
+        <li><a href="#" target="_blank"><img style="align-self: auto;max-width:100%;"src="img/facebook.png" alt="Facebook" width="50" height="50" ></li></a>
+        <li><a href="#" target="_blank"><img style="align-self: auto;max-width:100%;"src="img/email.png" alt="Email" width="50" height="50" ></li></a>
 
-        <!-- INSTAGRAM -->
-        <a class="ig-h" target="_blank">
-          <img src="https://img.icons8.com/ios-glyphs/90/000000/instagram.png">
-        </a>
+      </ul>
 
-        <!-- EMAIL -->
-        <a class="em-h" target="_blank">
-          <img src="https://img.icons8.com/ios-glyphs/90/000000/email.png">
-        </a>
-      </div>
     </div>
+  </div>
 
     <div style="text-align:center; padding-top:10%">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
       title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
