--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <li><a href="#" target="_blank"><img style="align-self: auto;max-width:100%;"src="img/email.png" alt="Email" width="50" height="50" ></li></a>
 
     </ul>
-
   </div>
+  <h1 style="text-align:center; font-size:18px;">You can contact us by clicking on any of the links above.</h1>
 </div>
 
     <div style="text-align:center; padding-top:10%">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"
