--- a/ourteam.html
+++ b/ourteam.html
@@ -34,6 +34,7 @@
       </ul>
 
     </div>
+  <h1 style="text-align:center; font-size:18px;">You can contact us by clicking on any of the links above.</h1>
   </div>
 
     <div style="text-align:center; padding-top:10%">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
