--- a/ourprojects.html
+++ b/ourprojects.html
@@ -9,7 +9,7 @@
 
   gtag('config', 'UA-143738060-1');
 </script>
->
+
   <title>Our Projects</title>
   <link rel="icon" type="image/png" href="img/idea.png" />
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
   <script src="javascript.js"></script>
 </head>
 <body>
-<h1 class="augmentedPerspective">Augmented Perspective</h1>
+<h1 class="augmentedPerspective"><a href="index.html">Augmented Perspective</a></h1>
 
 <ul class="navbar">
   <li><a class="active" href="index.html">About Us</a></li>
@@ -27,7 +27,7 @@
   <li><a href="contact.html">Contact Us</a></li>
 </ul>
 
-<p>Here you can find some of our projects</p>
+<p style="font-size : 50px;">Here you can find some of our projects</p>
 
 
 <footer>
