--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
   gtag('config', 'UA-143738060-1');
 </script>
->
+
   <title>Contact</title>
   <link rel="icon" type="image/png" href="img/contact.png" />
   <link rel="stylesheet" href="styles.css">
@@ -20,7 +20,7 @@
   <script src="javascript.js"></script>
 </head>
 <body>
-  <h1 class="augmentedPerspective">Augmented Perspective</h1>
+  <h1 class="augmentedPerspective"><a href="index.html">Augmented Perspective</a></h1>
 
   <ul class="navbar">
     <li><a class="active" href="index.html">About Us</a></li>
