--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   gtag('config', 'UA-143738060-1');
 </script>
->
+
   <title>Augmented Perspective</title>
   <link rel="icon" type="image/png" href="img/spotify.png" />
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
 </head>
 <body>
   <img class="not_a_logo" src="img/ap.png" alt="Augmented Perspective"width="200" height="200">
-<h1 class="augmentedPerspective">Augmented Perspective</h1>
+<h1 class="augmentedPerspective"><a href="index.html">Augmented Perspective</a></h1>
 
 <ul class="navbar">
   <li><a class="active" href="index.html">About Us</a></li>
@@ -29,14 +29,22 @@
 </ul>
 <br><br>
 <h1 style="text-align:center;">This page is about us</h1><br>
+
 <p>You can find the link to our podcast by clicking on the image below</p>
+<div class="center-image anchor">
   <a href="https://anchor.fm/ivan-kuzmin" target="_blank">
-    <img src="img/podcast.png" alt="Link to the podcast">
+    <img class="center-image" src="img/podcast.png" alt="Link to the podcast" width="500" height="500">
   </a>
+</div>
+
 <p>It is also available on Spotify</p>
-<a href="spotify:show:4CJploGVGTwqdGxJf3b7F2" target="_blank">
-  <img src="img/spotify.png" alt="Link to the podcast">
-</a>
+
+  <div class="center-image spotify">
+    <a href="spotify:show:4CJploGVGTwqdGxJf3b7F2" target="_blank">
+      <img src="img/spotify.png" alt="Link to the podcast" width="300" height="300">
+    </a>
+  </div>
+
 <footer>
 
 <div id="menu-outer">
