adding a subscription form

--- a/ourprojects.html
+++ b/ourprojects.html
@@ -25,6 +25,7 @@
   <li><a href="ourprojects.html">Our Project</a></li>
   <li><a href="ourteam.html">Our Team</a></li>
   <li><a href="contact.html">Contact Us</a></li>
+  <li><a href="benotified.html" target="_blank">Follow us</a></li>
 </ul>
 
 <p style="font-size : 50px;">Here you can find some of our projects</p>
