--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <li><a href="ourprojects.html">Our Project</a></li>
   <li><a href="ourteam.html">Our Team</a></li>
   <li><a href="contact.html">Contact Us</a></li>
+  <li><a href="benotified.html" target="_blank">Follow us</a></li>
 </ul>
 <br><br>
 <h1 style="text-align:center;">This page is about us</h1><br>
