--- a/benotified.html
+++ b/benotified.html
@@ -19,9 +19,11 @@
 				<h1>Augmented Perspective</h1>
 				<p>To be notified everytime we release a new podcast episode you can sign up down below.</p>
 		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="#" data-netlify="true">
+			<form id="signup-form" method="post" action="#" data-netlify-recaptcha="true" data-netlify="true">
 				<input type="email" name="email" id="email" placeholder="Email Address" />
 				<input type="submit" value="Sign Up" />
+				<div data-netlify-recaptcha="true">
+				</div>
 			</form>
 <br><br><br><br>
 		<!-- Footer -->
