--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 
   gtag('config', 'UA-143738060-1');
 </script>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-9129757186639898",
+    enable_page_level_ads: true
+  });
+</script>
   <title>Augmented Perspective</title>
   <link rel="icon" type="image/png" href="img/spotify.png" />
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
