added "this is a test" to a paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </a>
 </div>
 
-<p>It is also available on Spotify</p>
+<p>It is also available on Spotify and this is a test</p>
 
   <div class="center-image spotify">
     <a href="spotify:show:4CJploGVGTwqdGxJf3b7F2" target="_blank">
