removed "and this is a test"

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </a>
 </div>
 
-<p>It is also available on Spotify and this is a test</p>
+<p>It is also available on Spotify</p>
 
   <div class="center-image spotify">
     <a href="spotify:show:4CJploGVGTwqdGxJf3b7F2" target="_blank">
