changed our project to our projects

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <ul class="navbar">
   <li><a class="active" href="index.html">About Us</a></li>
-  <li><a href="ourprojects.html">Our Project</a></li>
+  <li><a href="ourprojects.html">Our Projects</a></li>
   <li><a href="ourteam.html">Our Team</a></li>
   <li><a href="contact.html">Contact Us</a></li>
   <li><a href="benotified.html" target="_blank">Follow us</a></li>
