--- a/ourprojects.html
+++ b/ourprojects.html
@@ -48,7 +48,7 @@
     <h1 style="text-align:center; font-size:18px;">You can contact us by clicking on any of the links above.</h1>
   </div>
 
-    <div style="text-align:center; padding-top:10%">Icons made by <a href="https://www.flaticon.com/authors/smashicons" target="_blank" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" target="_blank" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
+    <div style="text-align:center;">Icons made by <a href="https://www.flaticon.com/authors/smashicons" target="_blank" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" target="_blank" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
       title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 
 </footer>
