changed logo to a magnifying glass

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script src="javascript.js"></script>
 </head>
 <body>
-  <img class="not_a_logo" src="img/ap.png" alt="Augmented Perspective"width="200" height="200">
+  <img class="not_a_logo" src="https://pluspng.com/img-png/png-hd-magnifying-glass-a-simple-magnifying-glass-2400.png" alt="Augmented Perspective"width="600" height="382">
 <h1 class="augmentedPerspective"><a href="index.html">Augmented Perspective</a></h1>
 
 <ul class="navbar">
