added social medias

--- a/benotified.html
+++ b/benotified.html
@@ -27,10 +27,10 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://www.instagram.com/augmentedperspective/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://twitter.com/AugmentedPersp1" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/augmented.perspective.1" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="mailto: augmentedperspective2003@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 			</footer>
 		<!-- Scripts -->
