--- a/ourteam.html
+++ b/ourteam.html
@@ -36,11 +36,10 @@
     <div class="table">
       <ul id="horizontal-list" class="sharing">
 
-        <li><a href="#" target="_blank"><img style="align-self: auto; max-width:100%;"src="img/instagram.png" alt="Instagram" width="50" height="50"></li></a>
-        <li><a href="#" target="_blank"><img style="align-self: auto;max-width:100%;"src="img/twitter.png" alt="Twitter" width="50" height="50" ></li></a>
-        <li><a href="#" target="_blank"><img style="align-self: auto;max-width:100%;"src="img/facebook.png" alt="Facebook" width="50" height="50" ></li></a>
-        <li><a href="#" target="_blank"><img style="align-self: auto;max-width:100%;"src="img/email.png" alt="Email" width="50" height="50" ></li></a>
-
+        <li><a href="https://www.instagram.com/augmentedperspective/" target="_blank"><img style="align-self: auto; max-width:100%;"src="img/instagram.png" alt="Instagram" width="50" height="50"></li></a>
+        <li><a href="https://twitter.com/AugmentedPersp1" target="_blank"><img style="align-self: auto;max-width:100%;"src="img/twitter.png" alt="Twitter" width="50" height="50" ></li></a>
+        <li><a href="https://www.facebook.com/augmented.perspective.1" target="_blank"><img style="align-self: auto;max-width:100%;"src="img/facebook.png" alt="Facebook" width="50" height="50" ></li></a>
+        <li><a href="mailto: augmentedperspective2003@gmail.com" target="_blank"><img style="align-self: auto;max-width:100%;"src="img/email.png" alt="Email" width="50" height="50" ></li></a>
       </ul>
 
     </div>
