--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <p>You can find the link to our podcast by clicking on the image below</p>
 <div class="center-image anchor">
-  <a href="https://anchor.fm/ivan-kuzmin" target="_blank">
+  <a href="https://anchor.fm/augmented-perspective" target="_blank">
     <img class="center-image" src="img/podcast.png" alt="Link to the podcast" width="500" height="500">
   </a>
 </div>
@@ -47,7 +47,7 @@
 <p>It is also available on Spotify</p>
 
   <div class="center-image spotify">
-    <a href="spotify:show:4CJploGVGTwqdGxJf3b7F2" target="_blank">
+    <a href="https://open.spotify.com/show/2wVw0RqFPNrocNmb74wzH8?si=vk6yg_4TR_ysU5ebdVoYGw" target="_blank">
       <img src="img/spotify.png" alt="Link to the podcast" width="300" height="300">
     </a>
   </div>
