added some text to our project & our team

--- a/ourprojects.html
+++ b/ourprojects.html
@@ -28,7 +28,9 @@
   <li><a href="benotified.html" target="_blank">Follow us</a></li>
 </ul>
 
-<p style="font-size : 50px;">Here you can find some of our projects</p>
+<p style="text-align:left ; margin-left:50px ; margin-top : 60px ; margin-right: 50px">
+We deciced to start this podcast project, because we love debating about lots of different topics and discovering new things. Augmented Perspective is a podcast where we talk about politics, science, rugby, education...
+</p>
 
 
 <footer>
