--- a/ourteam.html
+++ b/ourteam.html
@@ -28,7 +28,9 @@
   <li><a href="benotified.html" target="_blank">Follow us</a></li>
 </ul>
 
-<p style="font-size : 50px;">Here you can see our team members</p>
+<p style="text-align:left ; margin-left:50px ; margin-top : 60px ; margin-right: 50px">
+  We are a group of 3 highschool students, who live in the North of France. We go to an international highschool that's called <a  style="color : red" href="https://www.ecolejeanninemanuel.org/en/public.html" target="_blank" title="EJM"> EJM</a>.
+</p>
 
 <footer>
 
